# surreal-engine

./: .env  LICENSE  README.md  animatedSkyboxFrag.glsl  cloudShader.glsl  docker-compose.yml  index.html  landFragmentShader.glsl  landVertexShader.glsl  planet.js  pyproject.toml  sdxl_turbo_server.py  snoise.glsl  waterFragmentShader.glsl  waterVertexShader.glsl  webpack.config.js
backend/: Dockerfile  camera_client.py  sdxl_turbo_server.py  test_inference.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  planet.js  webpack.config.js
frontend/shaders/nature/: landShaderFrag.glsl
frontend/shaders/postprocessing/: adjustmentPassFrag.glsl  motionBlurFrag.glsl  simpleBloomFrag.glsl  sunGlowFrag.glsl  sunGlowVert.glsl
frontend/shaders/skybox/: animatedSkyboxVert.glsl
